fix: 修复照片体验评审问题
